--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,62 +13,74 @@
     <!--layout="@layout/tool_bar">-->
     <!--</include>-->
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/eracord"
-        android:id="@+id/imageView4"
-        android:layout_marginBottom="20dp"
-        android:contentDescription="logo"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp" />
-
-    <android.support.design.widget.TextInputLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:id="@+id/emailinput"
-        android:layout_height="wrap_content">
-        <EditText android:id="@+id/editTextEmail"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/textcolor"
-            android:hint="@string/email"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
-    </android.support.design.widget.TextInputLayout>
+            android:orientation="vertical" >
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/passwordinput">
-        <EditText android:id="@+id/editTextPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textStyle="bold"
-            android:textColor="@color/textcolor"
-            android:hint="@string/password"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
-    </android.support.design.widget.TextInputLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/eracord"
+                android:id="@+id/imageView4"
+                android:layout_marginBottom="20dp"
+                android:contentDescription="logo"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp" />
 
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:text="Login"
-        android:theme="@style/AppTheme"
-        android:textEditNoPasteWindowLayout="@null"
-        android:layout_marginRight="20dp"
-        android:textStyle="normal|bold"
-        android:background="@color/colorAccent"
-        android:textSize="18sp" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/emailinput"
+                android:layout_height="match_parent">
+                <EditText android:id="@+id/editTextEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/textcolor"
+                    android:hint="@string/email"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/passwordinput">
+                <EditText android:id="@+id/editTextPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:textStyle="bold"
+                    android:textColor="@color/textcolor"
+                    android:hint="@string/password"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp" />
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/buttonLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:text="Login"
+                android:theme="@style/AppTheme"
+                android:textEditNoPasteWindowLayout="@null"
+                android:layout_marginRight="20dp"
+                android:textStyle="normal|bold"
+                android:background="@color/colorAccent"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
