--- a/app/src/main/res/layout-land/presenty_catalog.xml
+++ b/app/src/main/res/layout-land/presenty_catalog.xml
@@ -176,6 +176,21 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp" />
 
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:text="GO TO HOME"
+                    android:visibility="gone"
+                    android:clickable="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/backtohome"
+                    android:textColor="@color/colorWhite"
+                    android:background="@color/colorAccent"
+                    android:textStyle="normal|bold"
+                    android:textAlignment="center"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp" />
             </LinearLayout>
         </ScrollView>
 
