--- a/app/src/main/res/layout/presenty_catalog.xml
+++ b/app/src/main/res/layout/presenty_catalog.xml
@@ -175,6 +175,22 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp" />
 
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="GO TO HOME"
+                    android:visibility="gone"
+                    android:clickable="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/backtohome"
+                    android:textColor="@color/colorWhite"
+                    android:background="@color/colorAccent"
+                    android:textStyle="normal|bold"
+                    android:textAlignment="center"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp" />
+
             </LinearLayout>
         </ScrollView>
 
